# nrfProxy

./: .gitignore  .mcp.json  ADD_TESTING_PLAN.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  HANDOVER.md  LICENSE  PAIRING_PLAN.md  README.md  TODO.md  TODO_ARCHITECTURE.md  build.ps1  build.sh  prj.conf  prod.conf  testcase.yaml
.claude/: settings.local.json
.github/: dependabot.yml
.github/actions/setup-ncs/: action.yml
.github/workflows/: ci.yml
boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay  promicro_nrf52840_nrf52840_uf2.conf  promicro_nrf52840_nrf52840_uf2.overlay  xiao_ble_nrf52840.conf  xiao_ble_nrf52840.overlay
scripts/: check_configs.py  test_check_configs.py
src/: drop_stats.c  drop_stats.h  main.c  proxy_core.c  proxy_core.h  security_timeout.h  uart_bridge.c  uart_bridge.h  uart_rx_retry.c  uart_rx_retry.h
tests/host/: run.ps1  test_drop_stats.c  test_proxy_core.c  test_security_timeout.c  test_task7_hygiene.ps1  test_uart_rx_retry.c
tests/integration/uart_bridge/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/integration/uart_bridge/src/: main.c
tests/unit/hooks/: CMakeLists.txt  testcase.yaml
tests/unit/hooks/src/: main.c
tests/unit/identity/: CMakeLists.txt  testcase.yaml
tests/unit/identity/src/: main.c
tests/unit/policy/: CMakeLists.txt  testcase.yaml
tests/unit/policy/src/: main.c
